7/8/11 #3000, fix seam in IntensitySlider
6/25/11 Automatically update the ConstantDTClock in SimSpeedControl instead of duplicating listener code in many places, see #2798
6/23/11 Added MathUtil.clamp(int,int,int)
6/9/11 #2936, added MathUtil.clamp(double,DoubleRange)
6/7/11 Moved Dimension2DDouble to be a top-level class, see #123
6/7/11 Added docs to ModelViewTransform, see #123
5/23/11 Added getMax() functions to ImmutableRectangle2D
5/23/11 Removed AdvancedPanel constructor that used untranslated strings
5/20/11 Added ModelViewTransform.modelToView(ImmutableRectangle2D)
5/18/11 Changed ObservableProperty.trace() to use System.out instead of java.util.logging, resolves #2882
5/17/11 Made RichSimpleObserver observe ObservableProperty instances instead of Property instances
5/17/11 Added LessThan and extended CompositeBooleanProperty for GreaterThan, LessThan and GreaterThanOrEqualTo
5/17/11 Added GreaterThanOrEqualTo and added varargs for plus method
5/17/11 Added CompositeDoubleProperty and reimplemented classes such as Plus, Times, Max, Min, Times using it to provide composition methods on the result
5/16/11 Removed unused methods from MathUtil
5/13/11 ImmutableRectangle2D: made final fields public and added a toRectangle2D method
5/7/11 Fixed: NullPointerException when calling Module.setSimulationPanel(null), resolves #2812
5/5/11 removed unused property2 package, see #2775
5/4/11 #2848, new implementation of ButtonNode
5/3/11 Moved AbstractNotifier and Notifier to phetcommon from sugar and salt solutions
4/27/11 Made LinearSlider.DEFAULT_RESOLUTION public
4/26/11 Moved ImmutableRectangle2D from bending-light to phetcommon, see #2811
4/25/11 Removed unused PDFHandler class (which was fully commented out already)
4/21/11 Added a string key for getting the "Reset" string
4/20/11 Repaint frame when simulation panel changes to prevent "freezing" behavior, see #2812
4/11/11 Center the frame within the available region